--- a/Testing/templates/register.html
+++ b/Testing/templates/register.html
@@ -74,5 +74,6 @@
         <button type="submit"class="btn btn-primary">Register</button>
     </form>
   </div>
+ <script src="{{ url_for('static', filename='script.js') }}"></script>
 </body>
 </html>
