--- a/Testing/templates/index.html
+++ b/Testing/templates/index.html
@@ -165,6 +165,6 @@
   <footer class="footer">
       <p>&copy;     2024 TaskEase App @Alx Project. All rights reserved.</p>
 </footer>
-  <script src="script.js"></script>
+  <script src="{{ url_for('static', filename='script.js') }}"></script>
 </body>
 </html>
