--- a/Testing/templates/login.html
+++ b/Testing/templates/login.html
@@ -83,5 +83,6 @@ button[type="submit"]:hover {
       <button type="submit">Login</button>
     </form>
   </div>
+  <script src="{{ url_for('static', filename='script.js') }}"></script>
 </body>
 </html>
